test/indexAssignDep.slq

def main(){
	x:=vector(10,0:ğ”¹);
	y:=H(0:ğ”¹);
	z:=H(0:ğ”¹);
	x[0]=dup(y);
	x[1]=dup(y);
	x[2]=dup(z);
	__show(__query("dep",x)); // {y, z}
	// __show(__query("dep",x[0])); // {y} // TODO?
	// __show(__query("dep",x[2])); // {z} // TODO?
	measure(y);
	__show(__query("dep",x)); // âŠ¤
	forget(x); /// error
	return z;
}
